# UPPRPO

./: .directory  .gitmodules  CMakeLists.txt  README.md  test.txt
.github/workflows/: cmake-single-platform.yml
include/math/: minus.h  mul.h  sum.h
include/meta/: meta.h
src/: main.cpp
tests/: CMakeLists.txt  tests.cpp
